fix home hero text on mobile

--- a/app/assets/stylesheets/_partials/main/_media_queries.sass
+++ b/app/assets/stylesheets/_partials/main/_media_queries.sass
@@ -35,6 +35,10 @@
     padding-top: 30px!important
     h1
       font-size: 40px!important
+  #home-hero
+    padding-top: 0!important
+  .home-hero
+    font-size: 2.2rem!important
 
 
 
